# AVI-OpenMP

./: .gitignore  CMakeLists.txt  Makefile  README.md  data_demo.py  main.py
backend/: .gitignore  Makefile  __init__.py  backend_cpp.py  backend_py.py  compile.py  compile_interface.py  cpp_backend.py
backend/backend/: .gitignore  CMakeLists.txt  Makefile  main.cpp
backend/backend/lib/: CMakeLists.txt
backend/backend/lib/include/: backend.h  example.h  interface.h  main.h
backend/backend/lib/src/: backend.cpp  main.cpp
backend/backend/src/: backend.cpp
backend/cpp_backend/: CMakeLists.txt  Makefile  main.cpp
backend/cpp_backend/lib/src/: backend.cpp
cmake/: test.cmake
data/data_debug/: J_star_alpha_0_99.npy
data/data_small/: J_star_alpha_0_99.npy  P_shape.npy  parameters.pickle  pi_star_alpha_0_99.npy  star_graph_data.npy  star_graph_indices.npy  star_graph_indptr.npy  star_types.npy  stars.npy
tests/: example_test.py  functional_test.py
utils/: data.py  utils.py
